2022.03.26
- Added root variables to main.css, alignment.css, waves.css
- Renamed imagealign.css to alignment.css
- Rerouted all html pages to link to alignment.css
- Renamed DramaCD.html to Audio.html
- Rerouted all html pages to link to Audio.html
- Renamed page2.html to PlushToys.html
- Rerouted all html pages to link to PlushToys.html

2022.03.23
- Added Steam City Ringo Acrylic Stand to Misc list
- Added page for Steam City Ringo Acrylic Stand
	- Added low quality image and information text
- Edited Dusklight Doppelganger Arle page to include information about merch piece

2022.03.10
- Added Dusklight Doppelganger Arle Acrylic Stand to Misc list
- Added page for Dusklight Doppelganger Arle Acrylic Stand
	- Added placeholder image and text to page

2022.03.08
- Translated 2 pages into Spanish for Spanish blog

2022.03.03
- Fixed language toggle on tablet devices for 3 pages

2022.03.01
- Added in page for SEGA Gals Collection Arle Gachapon Figurine

2022.02.24
- Added responsive navigation menu to Spanish version of site

2022.02.23
- Changed colour of navigation menu on mobile
- Added gif to README.md
- Fixed location of language toggle on mobile and tablet devices

2022.02.22
- Finished adding mobile responsiveness to English site
	- Added responsive navigation for mobile devices
	- Created new JavaScript file for responsive navigation

2022.02.19
- Fixed about us elements in contact page to be responsive on mobile
- Added information on Puyo DA! plush set page
- Set max-width for figcaption

2022.02.18
- Fixed textbox responsiveness on mobile for all merch pages

2022.02.17
- Continued adding more mobile responsiveness to all other English site pages
- Adjusted svgs to adjust properly on all pages

2022.02.16
- Added more mobile responsiveness to site by starting to add "width=device-width" to viewport and adding
media queries to CSS documents
- Adjusted index.html and Misc.html to be mobile responsive

2022.02.15