@@ -6,7 +6,7 @@
 		<link href="../../main.css" rel="stylesheet" />
 		<link href="../../alignment.css" rel="stylesheet" />
 		<link href="../../Website Assets/BlogTabIcon.png" rel="icon" />
-		<title>El Blog de Bayoe~n - 2016 Figura Puyo Puyo 25 Aniversario del Premio SEGA - Arle y Carbuncle</title>
+		<title>El Blog de Bayoe~n - Colección de SEGA Gals Figura de Arle Nadja Gachapon</title>
 	</head>
 	<body>
 		<header>
@@ -35,25 +35,24 @@
 			</div>
 
 			<div id="lang-toggle">
-				<b><a href="../../Sub Pages/arle25thfigure.html">Inglés<a/> / <a href="Arle25thFigura.html">Español<a/></b>
+				<b><a href="../../Sub Pages/ArleSEGAGalsFigure.html">Inglés<a/> / <a href="ArleSEGAGalsFigura.html">Español<a/></b>
 			</div>
 		</header>
 		
 		<section class = "main">
 			<main id = "main">
 			<div id="locatortext">	
-				<img src="../../Website Assets/SPA Assets/Arle25thFigura.png" alt="2016 Figura Puyo Puyo 25 Aniversario del Premio SEGA - Arle y Carbuncle">
+				<img src="../../Website Assets/SPA Assets/FiguraDeArleSEGAGals.png" alt="Colección de SEGA Gals Figura de Arle Nadja Gachapon">
 				
 				<br></br>
 				
 				<div id="subalign1"> 
-					<img src="../../Website Assets/Merch Photos/arlecarbyfig25.jpg" width="500" alt="Figura del Premio SEGA Arle y Carbuncle" style="border: 5px solid #E0FFFF"
+					<img src="../../Website Assets/Merch Photos/ArleSEGAGals.jpg" width="500" alt="Colección de SEGA Gals Figura de Arle Nadja Gachapon" style="border: 5px solid #E0FFFF"
 				onclick="enlargeImg(this)" ondblclick="resetImg(this)">
 				
 				<div id="textbox2">
-					Una figura del Premio SEGA de Arle y Carbuncle celebrando el 25 aniversario de la serie. Lanzada junto a <a href = "Amitie25thFigura">una figura de Amitie y Carbuncle<a/> 
-					alrededor de la época en que <i>Puyo Puyo Chronicle</i> fue lanzada, la figura en sí está bastante bien hecha y es precisa para el aspecto moderno 
-					de Arle y Carbuncle a partir del 20 aniversario de Puyo Puyo.
+					Una figura gachapon de COMPILE Era Arle. Lanzado como parte de una serie de figuras de varias olas conocida como Colección de SEGA Gals con personajes de varios juegos de SEGA / SEGA Arcade, 
+                    este presenta Arle con un poco de Puyo. La figura mide aproximadamente 3 pulgadas de alto y hace una pequeña y agradable pieza de estante.
 				</div>
 			</main>
 		
