@@ -47,7 +47,7 @@
                 
                 <h4> COMPILE Era </h4>
                 <ul>
-                    <li>Colección SEGA Gals Gachapon Figuritas - Arle Nadja </li>
+                    <li><a href="ESP Sub/ArleSEGAGalsFigura.html">Colección SEGA Gals Gachapon Figuritas - Arle Nadja</a> </li>
                 </ul>
                 
                 <h4> SEGA Era </h4>
