@@ -35,7 +35,7 @@
 			<hr>
 
 			<div id="lang-toggle2">
-				<b><a href="ArleSEGAGalsFigure.html">English<a/> / <a href="#">Spanish<a/></b>
+				<b><a href="ArleSEGAGalsFigure.html">English<a/> / <a href="../ESP Site/ESP Sub/ArleSEGAGalsFigura.html">Spanish<a/></b>
 			</div>
 			
 			</div>
